@@ -1,3 +1,13 @@
+2000-11-24  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	* readline.c (scm_readline, scm_add_history, completion_function,
+	scm_filename_completion_function):  Replace calls to
+	SCM_COERCE_SUBSTR with SCM_STRING_COERCE_0TERMINATION_X.
+
+	(internal_readline, scm_add_history, scm_read_history,
+	scm_write_history, scm_filename_completion_function,
+	completion_function):  Replace SCM_CHARS with SCM_STRING_CHARS.
+
 2000-11-19  Gary Houston  <ghouston@arglist.com>
 
 	* configure.in: test $ac_cv_lib_readline_readline instead of
